--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -56,7 +56,7 @@
               {{ material.defaultAddress.addressLine2 }}
               {{ material.defaultAddress.city }}
               {{ material.defaultAddress.state }}
-              {{ material.defaultAddress.country }}
+              {{ material.defaultAddress.pinCode }}
             </a>
           </mat-panel-title>
         </mat-expansion-panel-header>
