--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -17,6 +17,10 @@
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{ material.projectName }}
+            <a href="javascript:void(0)" class="main-color p-l-15"
+              >{{ material.defaultAddress.addressLine1 }}, {{ material.defaultAddress.addressLine2 }}, {{ material.defaultAddress.city }}, {{ material.defaultAddress.state }},
+              {{ material.defaultAddress.pinCode }}
+            </a>
             <!-- <a href="javascript:void(0)" (click)="openDialog(material)"
                             class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a> -->
           </mat-panel-title>
@@ -78,7 +82,7 @@
           <ng-container matColumnDef="Makes">
             <th mat-header-cell *matHeaderCellDef>Makes</th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <app-chip (onUpdate)="makesUpdate($event, i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"> </app-chip>
+              <app-chip [chips]="element.makes" (onUpdate)="makesUpdate($event, i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0))"> </app-chip>
               <!-- <button mat-button class="display-flex pull-right" (click)="deleteMaterial(i)">
                     <mat-icon class="main-color">delete_outline</mat-icon>
                 </button> -->
