Whatsapp Designed,update profile done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -6,6 +6,15 @@
     <span><img width="200" src="../../../../assets/images/loginLogo.png" alt="logo"/></span>
     <span class="menu-spacer"></span>
 
+    <div class="whatsapp-div-header">
+     <div>
+       <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon">
+     </div>
+     <div class="whatsapp-icon-number">
+       +91 8512060007
+     </div>
+    </div>
+
     <button class="pull-right p-t-10 notification-bell-icon" mat-button [matMenuTriggerFor]="notifs">
       <a href="javascript:void(0)" (click)="openDiv()">
         <mat-icon
