--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -63,4 +63,22 @@ button.active {
 .notification-bell-icon.mat-button.mat-button-base:hover{
   background-color: none;
 }
-
+.whatsapp-icon{
+  width: 20px;
+  height: 20px;
+}
+.whatsapp-icon-number{
+font-size: 14px;
+padding-left:5px
+}
+.whatsapp-div-header{
+  display: flex;
+  padding: 2px 10px;
+  background: #e4dfdf7a;
+  border-radius: 5px;
+  margin-top:5px;
+}
+.font-signup{
+  font-size:13px;
+  font-weight:500;
+}
