--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -82,3 +82,9 @@ padding-left:5px
   font-size:13px;
   font-weight:500;
 }
+.three-months-signup-text{
+       background: white;
+    box-shadow: 2px -1px 20px -4px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    margin-top: 26px;
+}
