Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -36,7 +36,7 @@
         <mat-icon aria-hidden="false" aria-label="Example arrow_drop_down icon">arrow_drop_down</mat-icon>
       </button>
       <mat-menu #logIn="matMenu">
-        <button mat-menu-item class="background-white-color">
+        <button mat-menu-item class="background-white-color" (click)="goToProfile()" >
           My Account
         </button>
         <button mat-menu-item class="background-white-color" (click)="logout()" routerLinkActive="router-link-active">LogOut</button>
