fix Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -114,6 +114,8 @@
                                     {{ trade.tradeName }}
                                </mat-chip> 
                             </ng-container>
+                        </ng-container>
+                          <ng-container *ngFor="let x of usersTrade">
                             <ng-container *ngIf="x != trade.tradeId">
                                  <mat-chip >
                                       {{ trade.tradeName }}
