--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -154,7 +154,7 @@
         </mat-expansion-panel>
       </mat-accordion>
 
-      <mat-accordion *ngIf="nonSubmittedRfqListTemp">
+      <mat-accordion *ngIf="nonSubmittedRfnavServiceqListTemp">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
