--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -85,7 +85,7 @@
                   {{ project.defaultAddress.addressLine2 }}
                   {{ project.defaultAddress.city }}
                   {{ project.defaultAddress.state }}
-                  {{ project.defaultAddress.country }}
+                  {{ project.defaultAddress.pinCode }}
                 </a>
               </mat-panel-title>
             </mat-expansion-panel-header>
