--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -35,7 +35,7 @@
                          <!-- <div class="font-size16 p-5">Sign Up to avail three months free trial</div> -->
                     </div>
                      <div class="col-sm-12 p-t-15 p-b-15">
-                        <div class="font-signup">You will be charged a monthly subscription fee of INR 9999 after your three month free trial period ends</div>
+                        <div class="font-signup">You will be charged a monthly subscription fee of INR 9999 after your three month free trail period ends</div>
                          <!-- <div class="font-size16 p-l-5 p-r-5"> </div> -->
                     </div>
                 </div>
