--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -65,7 +65,7 @@
                   </mat-error>
                 </mat-error>
 
-                <mat-form-field class="border-select w-100">
+                <mat-form-field class="border-select w-100" >
                   <mat-label>Role</mat-label>
                   <mat-select formControlName="roleId">
                     <mat-option *ngFor="let role of roles" [value]="role.roleId">
@@ -93,44 +93,21 @@
 
               </div>
 
-              <!-- <div class="col-md-12">
-                                <p>Choose Trades</p>
-                                <div class="trade-list d-flex align-items-center flex-wrap">
-                                    <div class="trades" *ngFor="let trade of tradeList; let i = index"
-                                        [ngClass]="{'active': clickedItem === i }"
-                                        (click)="clickedItem = i">
-                                        <h6 class="trade-tile">{{ trade.tradeName }}</h6>
-                                    </div>
-                                </div>
-                            </div> -->
-
               <div class="col-sm-12 col-md-12 choose-trades" *ngIf="users.roleName === 'l1'">
                 <p style="font-weight: 600;">Choose Trades</p>
                 <mat-chip-list multiple id="chipList" [selectable]="true">
-                  <!-- <ng-container *ngFor="let trade of tradeList">
-                        <ng-container *ngFor="let x of usersTrade">
-                            <ng-container *ngIf="x == trade.tradeId">
-                               <mat-chip class="background-green">
-                                    {{ trade.tradeName }}
-                               </mat-chip> 
-                            </ng-container>
-                        </ng-container>
-                         
-                  </ng-container>
-                   -->
                       <mat-chip
                     *ngFor="let trade of tradeList"
                     [selected]="trade.tradeId"
                     [ngClass]="[trade.selected && trade.tradeId !== 22 ? 'active' : '', trade.tradeId === 22 ? 'user-Other-Trade' : '']"
-                    (click)="trade.selected = !trade.selected; changeSelected('s', trade)"
                   >
                     {{ trade.tradeName }}
                   </mat-chip>
-                  <form [formGroup]="customTrade">
+                  <!-- <form [formGroup]="customTrade">
                     <mat-form-field *ngIf="selectedTradesId.indexOf(22) > -1" class="border-input p-l-10">
                       <input matInput formControlName="trade" type="text" placeholder="Enter Trade" />
                     </mat-form-field>
-                  </form>
+                  </form> -->
                 </mat-chip-list>
               </div>
 
