Terms Started and Rfq Detail Page Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -153,8 +153,8 @@
           </div>
         </mat-expansion-panel>
       </mat-accordion>
-
-      <mat-accordion *ngIf="nonSubmittedRfnavServiceqListTemp">
+<br>
+      <mat-accordion *ngIf="nonSubmittedRfqListTemp">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
