--- a/src/app/features/first-login/terms-conditions/terms-conditions.component.html
+++ b/src/app/features/first-login/terms-conditions/terms-conditions.component.html
@@ -7,14 +7,103 @@
                        <h1 class="font-size20 font-bold">Terms & Conditions</h1>
                     </div>
 
-                    <div class="terms-conditions__outer-gray">
+                    <div class="terms-conditions__outer-gray text-align-justify">
                         <p class="terms-conditions__content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            This Terms of Use document ("<b>TOS</b>") is a legal agreement between you, the end user ("<b>You</b>"/"<b>Your</b>"), and Archer Technologies Pvt. Ltd ("<b>Archer Technologies</b>"), the owner of all intellectual property rights in the cloud-based architecture platform titled "BuildSupply Material Manager" ("<b>Platform</b>"). The TOS describes the terms on which Archer Technologies offers access to the Platform and the Services (defined below) to all end users.
                         </p>
-
                         <p class="terms-conditions__content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                <b>
+                                    PLEASE READ THE TOS CAREFULLY. BY ACCEPTING THIS AGREEMENT YOU AGREE TO FOLLOW AND BE BEOUND BY THE TERMS AND CONDITIONS OF THIS AGREEMENT.
+                                </b>
                         </p>
+                        <p class="terms-conditions__content">
+                            This is a legally binding agreement and is enforceable against You. Archer Technologies may modify the terms of the TOS at any time and shall inform You of the same. You will be deemed to have accepted the revised TOS if You continue to access the Platform after the modifications become effective. Lack of knowledge related to the TOS or the amendments effected to the TOS from time to time may not absolve you from any of Your liabilities under the Terms of Use.
+                        </p>
+                        <p class="terms-conditions__content">
+                            If You do not agree to the terms of this TOS, please do not access or use the Platform. This TOS sets forth the terms and conditions that govern orders placed by You for Services under this Agreement.
+                        </p>
+                        <p class="terms-conditions__content">
+                            <span class="terms-conditions__content-heading">
+                                REGISTRATION
+                            </span>
+                        </p>
+                        <p class="terms-conditions__content">
+                             In order to access and use the Platform, You will be required to register Yourself and maintain an account ("Account") which will require You to furnish to Archer Technologies, certain information and details, including Your name, e-mail id, and any other information deemed necessary by Archer Technologies ("Account Information"). You agree to keep this information updated at all times.
+                        </p>
+                        <p class="terms-conditions__content">
+                             You shall be responsible for maintaining the confidentiality and security of the password and for all activities that occur in and through Your Account. Archer Technologies and its affiliates / partners are not liable for any harm caused by, or related to the theft of, Your ID, Your disclosure of Your Account Information, or Your authorization to allow another person to access and use the Service using Your Account. However, You may be liable to Archer Technologies and its affiliates / partners for the losses caused to them due to such unauthorized use.
+                        </p>
+                          <p class="terms-conditions__content">
+                            <span class="terms-conditions__content-heading">
+                                ACCOUNT DOs AND DON’Ts:
+                            </span>
+                            <span class="p-l-5">
+                                You agree to abide by the following dos and don’ts for registering and maintaining the security of Your Account.
+                            </span>
+                        </p>
+                         <p class="terms-conditions__content">
+                             <ul>
+                                 <li>You will create the Account on behalf of an entity or firm or in Your individual capacity only if You are a natural person aged 18 years or above and competent to enter into a valid and binding contract.
+                                 </li>
+                                 <li>
+                                     You will not provide any false personal information to Archer Technologies.
+                                 </li>
+                                <li>
+                                    You shall ensure that the Account Information is complete, accurate and up-to-date at all times.
+                                </li>
+                                <li>
+                                    You shall not use any other user’s Account Information or log into that user’s Account.
+                                </li>
+                                <li>
+                                    You will not share Your password or do anything that might jeopardize the security of Your Account.
+                                </li>
+                                <li>
+                                    On completing the registration process, You shall be entitled to access the Platform and avail of the Services.
+                                </li>
+                                <li>
+                                    Your account, ID, and password may not be transferred or sold to another party.
+                                </li>
+                                <li>
+                                    You agree to immediately notify Archer Technologies of any unauthorized use of Your account or any other breach of security known to you.
+                                </li>
+                                <li>
+                                    In order to ensure that Archer Technologies is able to provide high quality services, respond to customer needs, and comply with laws, You hereby consent to let Archer Technologies’ employees and agents access Your Account and records on a case-to-case basis to investigate complaints or other allegations or suspected abuse. Additionally, You agree to disclose to Archer Technologies, and permit Archer Technologies to use, Your log-in ID, password and such other account details with respect to Your account(s) with e-commerce websites/platforms, for the limited purpose of resolving technical problems.
+                                </li>
+                                <li>
+                                    The Site and the Services are to be used only for lawful purposes. The site must not be used to post, store, distribute, display or present any information, software, data, file or material in violation of any applicable law or regulation.
+                                </li>
+                                <li>
+                                    You shall not promote or convey provocative or prohibited contents which is illegal and harmful and that induces a conduct which is unlawful, defamatory, obscene, racial, offensive, pornographic or culturally offensive or otherwise reasonably and is likely to generate such conduct;
+                                </li>
+                                <li>
+                                    You shall not post any pornographic content or pictures, engage in transmitting child pornographic materials or activities harmful to children;
+                                </li>
+                                <li>
+                                    You shall not provide any false, misleading or inaccurate information;
+                                </li>
+                                <li>
+                                    You shall not indulge in identity theft, unauthorized advertising using Archer account;
+                                </li>
+                                <li>
+                                    You shall not upload or transmit any similar applications including viruses, worms or other malicious code or programs designed to harm other computers or telecommunication devices;
+                                </li>
+                                <li>
+                                    You shall not infringe anyone’s intellectual property rights, including copyrights, trade marks, patents and trade secrets.
+                                </li>
+                                <li>
+                                    You shall not infringe anyone’s privacy or publicity rights, which include but are not limited to impersonating another person or entity or posting images of someone without their permission;
+                                </li>
+                                <li>
+                                    You shall not engage in activities which include but are not limited to hacking other computers or servers, including Archer’s; or violate any requirements, procedures, policies or rules of networks related to the system; Engage in any unlawful activity using credit cards;
+                                </li>
+                                <li>
+                                    You shall not falsely express or imply that Archer sponsors, endorses or is otherwise associated with You or Your content;
+                                </li>
+                                <li>
+                                    
+                                </li>
+                             </ul>
+                         </p>
                     </div>
 
                     <div class="terms-conditions__actions w-50 mx-auto mt-4 d-flex justify-content-center">
