--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -425,6 +425,15 @@
 
   &__content {
     color: #696969;
+    font-size: 14px;
+    text-align: justify;
+  }
+  &__content-heading{
+    color: #696969;
+    font-size: 14px;
+    text-align: justify;
+    text-decoration: underline;
+    font-weight: 700;
   }
 }
 
