--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -88,3 +88,9 @@ padding-left:5px
     border-radius: 8px;
     margin-top: 26px;
 }
+.agree-checkbox{
+  display: flex;
+  justify-content: center;
+      padding-top: 10px;
+    font-size: 14px;
+}
