--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -31,11 +31,11 @@
 
                 <div class="row text-align-center three-months-signup-text">
                     <div class="col-sm-12 p-t-10">
-                        <div class="font-size20 font-bold blue-color p-5">3 MONTHS FREE TRAIL</div>
+                        <div class="font-size20 font-bold blue-color p-5">3 MONTHS FREE TRIAL</div>
                          <!-- <div class="font-size16 p-5">Sign Up to avail three months free trial</div> -->
                     </div>
                      <div class="col-sm-12 p-t-15 p-b-15">
-                        <div class="font-signup">You will be charged a monthly subscription fee of INR 9999 after your three month free trail period ends</div>
+                        <div class="font-signup">You will be charged a monthly subscription fee of INR 9999 after your three months free trial period ends</div>
                          <!-- <div class="font-size16 p-l-5 p-r-5"> </div> -->
                     </div>
                 </div>
