--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -13,7 +13,7 @@
             </div>
           </div>
           <div class="col-md-4 p-t-10">
-            <label class="text-bold">RFQ End Date & Time: </label>
+            <label class="text-bold">RFQ End Date: </label>
             {{ rfqDetails.dueDate | date: "dd MMM yyy" }}
           </div>
 
