--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -204,7 +204,9 @@
 
           <div class="banner mb-4">
             <div class="banner__image">
-              <img src="assets/images/fb_banner_new.png" alt="Facebook Banner" class="img-fluid" />
+              <a href="https://www.buildsupply.com" class="cursor-pointer">
+                   <img src="assets/images/fb_banner_new.png" alt="Facebook Banner" class="img-fluid" />
+              </a>
             </div>
           </div>
 
