--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -78,7 +78,7 @@
                 </mat-error>
 
 
-                  <mat-form-field class="border-select w-100">
+                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
                   <mat-label>Select Turn Over</mat-label>
                   <mat-select formControlName="turnOverId">
                     <mat-option *ngFor="let turnOver of turnOverList" [value]="turnOver.turnOverId">
@@ -102,7 +102,7 @@
                                         <h6 class="trade-tile">{{ trade.tradeName }}</h6>
                                     </div>
                                 </div>
-                            </div> -->
+                    </div> -->
 
               <div class="col-sm-12 col-md-12 choose-trades" *ngIf="users.roleName === 'l1'">
                 <p style="font-weight: 600;">Choose Trades</p>
