--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -78,7 +78,7 @@
                 </mat-error>
 
 
-                  <mat-form-field class="border-select w-100">
+                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
                   <mat-label>Select Turn Over</mat-label>
                   <mat-select formControlName="turnOverId">
                     <mat-option *ngFor="let turnOver of turnOverList" [value]="turnOver.turnOverId">
@@ -100,6 +100,7 @@
                     *ngFor="let trade of tradeList"
                     [selected]="trade.tradeId"
                     [ngClass]="[trade.selected && trade.tradeId !== 22 ? 'active' : '', trade.tradeId === 22 ? 'user-Other-Trade' : '']"
+                    style="cursor: default;"
                   >
                     {{ trade.tradeName }}
                   </mat-chip>
