Sign Up and Forgot Pass Implementation started Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -1,50 +1,94 @@
-<div class="page-start-point">
-  <div class="p-b-20 min-height parent">
+<div>
     <div class="row m-0">
-      <div class="col-md-7 ">
-        <div class="min-height">
-          <img
-            src="../../../assets/images/Login.jpg"
-            alt="construction-site-image"
-            style="width: 100%;"
-          />
+        <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
+            <div class="min-height">
+                <img src="../../../assets/images/image-login.png"
+                    alt="construction-site-image" class="login-image" style="width: 100%;" />
+            </div>
         </div>
-      </div>
-      <div class="col-md-5 parent">
-        <div class="row center-element">
-          <div class="col-xs-12 p-b-30 p-l-0">
-            <img
-              src="../../../assets/images/loginLogo.png"
-              alt="BuildSupply"
-              style="height:60px"
-            />
-          </div>
+        <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
+            <div class="form-design-forget justify-content-center">
 
-          <div class="col-xs-12 p-0">
-            <h3 class="p-b-20">Forgot Your Password</h3>
-            <p class="dark-gray-color">
-              Enter your registered mobile number and we will send you OTP to
-              change your password.
-            </p>
-          </div>
+                <!-- buildsupply logo -->
+                <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
+                <div *ngIf="phonescreenShow">
+                  <div class="heading-forget"> Forgot Your Password </div>
+                  <div class="heading-des-forget">Enter your registered mobile number and we will send you OTP to change your password.</div>
+                </div>
 
-          <mat-form-field class="col-xs-12 border-input p-t-30 p-l-0">
-            <input matInput type="number" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="Phone No." />
-          </mat-form-field>
+                 <div *ngIf="OtpscreenShow && (!verifiedMobile)">
+                  <div class="heading-forget"> 
+                    <div class="otp">
+                      <img src="../../../assets/images/back.png" (click)="goBackToNumber()">
+                      <div>
+                         Enter OTP 
+                      </div>
+                    </div>
+                  </div>
+                  <div class="heading-des-forget">One Time Password (OTP) has been send to your mobile ******{{lastFourDigit}}, Please enter the same here to sign in.</div>
+                </div>
 
-          <div mat-dialog-actions class="col-xs-12 p-t-40 p-l-0">
-            <button
-              mat-raised-button
-              class="main-background-color main-button color-white m-b-5"
-              [mat-dialog-close]=""
-              cdkFocusInitial
-              style="width: 100%;"
-            >
-              Submit
-            </button>
-          </div>
+                 <div *ngIf="passscreenShow">
+                  <div class="heading-forget"> Change Password </div>
+                </div>
+
+                <form *ngIf="forgetPassForm" [formGroup]="forgetPassForm" class="forget-pass-form">
+                  
+                  <ng-container *ngIf="phonescreenShow">
+                       <mat-form-field class="col-xs-12 border-input display-flex">
+                        <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone" placeholder="Phone No." (input)="enterPhone($event)" />
+                          <small
+                        *ngIf="forgetPassForm.controls['phone'].hasError('required') && forgetPassForm.controls['phone'].touched"
+                        class="forgetPassForm-error-msg p-l-12"> Phone No is required </small>
+                        <small
+                        *ngIf="forgetPassForm.controls['phone'].hasError('pattern') && forgetPassForm.controls['phone'].touched"
+                        class="forgetPassForm-error-msg p-l-12"> Enter Valid Phone No</small>
+                    </mat-form-field>
+
+                      <div mat-dialog-actions class="col-xs-12 p-t-40">
+                          <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+                              cdkFocusInitial style="width: 100%;" [disabled]="(verifiedMobile)" (click)="submitNumber()">
+                              Submit</button>
+                      </div>
+                  </ng-container>
+                   
+                    <ng-container *ngIf="OtpscreenShow && (!verifiedMobile)">
+                       <mat-form-field class="col-xs-12 border-input display-flex">
+                          <input matInput type="text"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="otp" (input)="enterOTP($event)" placeholder="Enter the OTP" />
+                        <small
+                        *ngIf="forgetPassForm.controls['otp'].hasError('required') && forgetPassForm.controls['otp'].touched"
+                        class="forgetPassForm-error-msg"> OTP No is required </small>
+                        <small *ngIf="!lessOTPDigits && (otpLength==4)" class="forgetPassForm-error-msg"> Enter Valid OTP</small>
+                        <small class="signupForm-error-msg resend-otp" (click)="resendOtp()"> Resend OTP </small>
+                    </mat-form-field>
+
+                      <div mat-dialog-actions class="col-xs-12 p-t-40">
+                          <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+                              cdkFocusInitial style="width: 100%;" [disabled]="!lessOTPDigits" (click)="submitOTP()">
+                              Verify</button>
+                      </div>
+                  </ng-container>
+                   
+
+                    <ng-container *ngIf="passscreenShow">
+                      
+                        <mat-form-field class="col-xs-12 border-input password-forget">
+                            <input matInput [type]="showPassWordString? 'text': 'password'" formControlName="password" placeholder="Password" />
+                            <a>
+                                <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
+                            </a>
+                        </mat-form-field>
+
+                      <div mat-dialog-actions class="col-xs-12 p-t-40">
+                          <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+                              cdkFocusInitial style="width: 100%;" [disabled]="!phoneNumberChecked" (click)="submitPass()">
+                              Submit</button>
+                      </div>
+                  </ng-container>
+                   
+
+                  </form>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
