--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -16,7 +16,7 @@
             <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
           </a>
           <div class="main-color">
-            <a class="pull-right p-t-20 cursor-pointer">Forgot Password</a>
+            <a class="pull-right p-t-20 cursor-pointer" (click)="goToForgetPass()">Forgot Password</a>
           </div>
         </mat-form-field>
 
