--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,6 +19,7 @@
 @import "./pages/dialog-styles.scss";
 @import "./pages/card-layout.scss";
 @import "./pages/signin-signup.scss";
+@import "./pages/forget-pass.scss";
 @import "./layout/loader.scss";
 @import "./pages/indent.scss";
 // @import '../../../node_modules/ngx-guided-tour/scss/guided-tour-base-theme.scss';
