--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="signupForm" [formGroup]="signupForm" (ngSubmit)="signup()" class="sign-up-form">
+<form *ngIf="signupForm" [formGroup]="signupForm" class="sign-up-form">
  
                 <!-- <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="firstName" type="text" placeholder="First Name" />
@@ -6,16 +6,21 @@
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="lastName" type="text" placeholder="Last Name" />
                 </mat-form-field> -->
-                <mat-form-field class="col-xs-12 border-input">
+               <div class="phone-number">
+                    <mat-form-field class="col-xs-12 border-input display-flex">
                     <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone" placeholder="Phone No." (input)="enterPhone($event)" />
-                     <small
+                    <button  mat-raised-button class="background-white-color main-button color-main pull-right" (click)="sendOtpBtn()">
+                        Send Otp
+                    </button>
+                </mat-form-field>
+                  <small
                     *ngIf="signupForm.controls['phone'].hasError('required') && signupForm.controls['phone'].touched"
-                    class="signupForm-error-msg"> Phone No is required </small>
+                    class="signupForm-error-msg p-l-12"> Phone No is required </small>
                     <small
                     *ngIf="signupForm.controls['phone'].hasError('pattern') && signupForm.controls['phone'].touched"
-                    class="signupForm-error-msg"> Enter Valid Phone No</small>
-                    <small *ngIf="lessOTPDigits" class="signupForm-error-msg green-colour"> Mobile Number is Verified</small>
-                </mat-form-field>
+                    class="signupForm-error-msg p-l-12"> Enter Valid Phone No</small>
+                    <small *ngIf="lessOTPDigits" class="signupForm-error-msg green-colour p-l-12"> Mobile Number is Verified</small>
+               </div>
 
                 <mat-form-field class="col-xs-12 border-input" *ngIf="showOtp && !lessOTPDigits">
                     <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="otp" (input)="enterOTP($event)" placeholder="Enter the OTP" />
@@ -23,6 +28,7 @@
                     *ngIf="signupForm.controls['otp'].hasError('required') && signupForm.controls['otp'].touched"
                     class="signupForm-error-msg"> OTP No is required </small>
                     <small *ngIf="!lessOTPDigits && (otpLength==4)" class="signupForm-error-msg"> Enter Valid OTP</small>
+                    <!-- <small class="signupForm-error-msg green-colour"> Resend OTP </small> -->
                 </mat-form-field>
                 
                 <mat-form-field class="col-xs-12 border-input">
@@ -34,7 +40,7 @@
                     *ngIf="signupForm.controls['email'].hasError('required') && signupForm.controls['email'].touched"
                     class="signupForm-error-msg"> Email is required </small>
                     <small
-                    *ngIf="signupForm.controls['email'].hasError('minlength') && signupForm.controls['email'].touched"
+                    *ngIf="signupForm.controls['email'].hasError('pattern') && signupForm.controls['email'].touched"
                     class="signupForm-error-msg"> Enter Valid Email</small>
 
                     <small *ngIf="(!emailVerified)">Email already in use.</small>
@@ -59,7 +65,7 @@
                 </mat-form-field> -->
                 <div mat-dialog-actions class="col-xs-12 p-t-40">
                     <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-                        cdkFocusInitial style="width: 100%;" [disabled]="!signupForm.valid || !lessOTPDigits || !emailVerified">
+                        cdkFocusInitial style="width: 100%;" [disabled]="!signupForm.valid || !lessOTPDigits || !emailVerified" (click)="signup()">
                         Sign Up
                     </button>
                 </div>
