--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -32,7 +32,7 @@
                             class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a> -->
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <table mat-table [dataSource]="material.projectMaterialList" class="mat-elevation-z8 col-sm-12">
+        <table mat-table [dataSource]="material.projectMaterialList" class="mat-elevation-z8 col-sm-12 rfq-custom-mat-width">
           <ng-container matColumnDef="Material Name">
             <th mat-header-cell *matHeaderCellDef>Material Name</th>
             <td mat-cell *matCellDef="let element">
@@ -47,23 +47,42 @@
             </td>
           </ng-container>
           <!-- Name Column -->
-          <ng-container matColumnDef="Requested Quantity">
-            <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
-            <td mat-cell *matCellDef="let element">
+          <ng-container matColumnDef="Requested Qty">
+            <th mat-header-cell class="text-center" *matHeaderCellDef>Requested Qty</th>
+            <td mat-cell class="text-center" *matCellDef="let element">
               {{ element.requestedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
             </td>
           </ng-container>
+
           <!-- Name Column -->
-          <ng-container matColumnDef="Estimated Quantity">
-            <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
-            <td mat-cell *matCellDef="let element">
+
+          <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
+            <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              <mat-form-field class="border-input date-label date-button mat-form-field-padding" [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)">
+                <!-- <mat-label>Fullfil </mat-label> -->
+                <span class="form-placeholder">{{
+                  materialForms["controls"]["forms"]["controls"][i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
+                    | date: "dd-MMM-yyy"
+                }}</span>
+                <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
+                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
+                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
+              </mat-form-field>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="Estimated Qty">
+            <th mat-header-cell class="text-center" *matHeaderCellDef>Estimated Qty</th>
+            <td mat-cell class="text-center" *matCellDef="let element">
               {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
             </td>
           </ng-container>
+
           <!-- estimated rate -->
           <ng-container matColumnDef="Estimated Rate">
-            <th mat-header-cell *matHeaderCellDef>Awarded Rate</th>
-            <td mat-cell *matCellDef="let element; let i = index">
+            <th mat-header-cell class="text-center" *matHeaderCellDef>Awarded Rate</th>
+            <td mat-cell class="text-center" *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)" class="border-input table-input">
                 <input
                   matInput
@@ -78,8 +97,8 @@
           </ng-container>
           <!-- quantity -->
           <ng-container matColumnDef="Quantity">
-            <th mat-header-cell *matHeaderCellDef>Quantity</th>
-            <td mat-cell *matCellDef="let element; let i = index">
+            <th mat-header-cell class="text-center" *matHeaderCellDef>Quantity</th>
+            <td mat-cell class="text-center" *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)" class="border-input table-input">
                 <input matInput formControlName="materialQty" type="number" placeholder="Quantity" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
               </mat-form-field>
