--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -69,7 +69,7 @@
 
       <!-- Accordion for PO Lists -->
       <div class="po-list-detail-custom">
-        <div *ngIf="poApprovalDetailsTemp">
+        <!-- <div *ngIf="poApprovalDetailsTemp">
           <mat-expansion-panel class="myPanel m-b-10" [expanded]="true">
             <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
               <mat-panel-title>
@@ -77,7 +77,7 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="row matCellAlignLeft">
-              <table mat-table [dataSource]="poApprovalDetails" class="mat-elevation-z8 col-sm-12">
+              <table mat-table [dataSource]="poApprovalDetails" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
                 <ng-container matColumnDef="PO Number">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
@@ -86,7 +86,14 @@
                 <ng-container matColumnDef="Raised Date">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>Raised Date</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
-                    {{ element.created_at | date: "dd-MMM-yyy" }}
+                    {{ element.poStatusChangedOn | date: "dd-MMM-yyy" }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Supplier Name">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef>Supplier Name</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    {{ element.supplierName }}
                   </td>
                 </ng-container>
 
@@ -107,7 +114,80 @@
                 <ng-container matColumnDef="Action">
                   <th mat-header-cell class="text-align-center" class="text-align-right" *matHeaderCellDef></th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
-                    <a style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
+                    <span class="p-r-10">
+                      <a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
+                    </span>
+                    <span>&nbsp;</span>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+              </table>
+            </div>
+          </mat-expansion-panel>
+        </div> -->
+        <div *ngIf="poApprovalDetailsTemp">
+          <mat-expansion-panel class="myPanel" [expanded]="true">
+            <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
+              <mat-panel-title>
+                P.O. For Approval
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div class="row matCellAlignLeft">
+              <table mat-table [dataSource]="poApprovalDetails" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
+                <ng-container matColumnDef="PO Number">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="Raised Date">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef>Raised Date</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    {{ element.poStatusChangedOn | date: "dd-MMM-yyy" }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Supplier Name">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef>Supplier Name</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    {{ element.supplierName }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Total Material">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef class="text-align-center">Total Material</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    {{ element.totalMaterials }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="PO Amount">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount ₹</th>
+                  <td mat-cell class="text-right" *matCellDef="let element">
+                    {{ element.poAmount | number: "1.2-2" }}
+                  </td>
+                </ng-container>
+
+                <!-- <ng-container matColumnDef="Action">
+                  <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    <span class="p-r-10"
+                      ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a></span
+                    >
+                    <span>&nbsp;</span>
+                    <span class="p-r-10 float-right"
+                      ><a (click)="deleteDraftedPo(element)" matTooltip="Delete"> <img src="../../../../assets/images/delete-button.png" /> </a
+                    ></span>
+                  </td>
+                </ng-container> -->
+
+                <ng-container matColumnDef="Action">
+                  <th mat-header-cell style="width: 321px" class="text-align-center" class="text-align-right" *matHeaderCellDef></th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    <span class="p-r-10">
+                      <a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
+                    </span>
                   </td>
                 </ng-container>
 
@@ -117,7 +197,6 @@
             </div>
           </mat-expansion-panel>
         </div>
-
         <div *ngIf="poDraftedDetailsTemp">
           <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
@@ -126,7 +205,7 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="row matCellAlignLeft">
-              <table mat-table [dataSource]="poDraftedDetails" class="mat-elevation-z8 col-sm-12">
+              <table mat-table [dataSource]="poDraftedDetails" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
                 <ng-container matColumnDef="PO Number">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
@@ -135,7 +214,14 @@
                 <ng-container matColumnDef="Raised Date">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>Raised Date</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
-                    {{ element.created_at | date: "dd-MMM-yyy" }}
+                    {{ element.poStatusChangedOn | date: "dd-MMM-yyy" }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Supplier Name">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef>Supplier Name</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    {{ element.supplierName }}
                   </td>
                 </ng-container>
 
@@ -181,7 +267,7 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="row matCellAlignLeft">
-              <table mat-table [dataSource]="acceptedRejectedPOList" class="mat-elevation-z8 col-sm-12">
+              <table mat-table [dataSource]="acceptedRejectedPOList" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
                 <ng-container matColumnDef="PO Number">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
@@ -190,7 +276,14 @@
                 <ng-container matColumnDef="Raised Date">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>Raised Date</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
-                    {{ element.created_at | date: "dd-MMM-yyy" }}
+                    {{ element.poStatusChangedOn | date: "dd-MMM-yyy" }}
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Supplier Name">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef>Supplier Name</th>
+                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                    {{ element.supplierName }}
                   </td>
                 </ng-container>
 
@@ -204,17 +297,25 @@
                 <ng-container matColumnDef="PO Amount">
                   <th mat-header-cell *matHeaderCellDef class="text-right">PO Amount ₹</th>
                   <td mat-cell *matCellDef="let element" class="text-right">
-                    {{ element.poAmount }}
+                    {{ element.poAmount | number: "1.2-2" }}
                   </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
-                  <th mat-header-cell class="text-align-center" *matHeaderCellDef></th>
-                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                  <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
+                  <td mat-cell *matCellDef="let element">
                     <span class="p-r-10"
+                      ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
+                    >
+                    <!-- <span>&nbsp;</span> -->
+                    <span class="p-r-10"
+                      ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/view-grn/', element.purchaseOrderId]">Add/Add Good Receive Note</a></span
+                    >
+
+                    <!-- <span class="p-r-10"
                       ><a style="color: #f47721" href="javascript:void(0)" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
                     >
-                    <span class="p-r-10"> <a style="color: #f47721" [routerLink]="['../../po/view-grn/', element.purchaseOrderId]">Add/View GRN</a></span>
+                    <span class="p-r-10"> <a style="color: #f47721" [routerLink]="['../../po/view-grn/', element.purchaseOrderId]">Add/View GRN</a></span> -->
                     <!-- <span><a style="color: #f47721" [routerLink]="['../../po/add-grn/',element.purchaseOrderId]">Add
                         GRN</a></span> -->
                   </td>
