--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -46,92 +46,94 @@
     </div> -->
   </div>
   <div *ngFor="let material of projectSelectedMaterials | SearchPipe: searchProject:'projectName'; let mati = index">
-    <mat-accordion class="accordion-padding-zero" formArrayName="forms">
-      <mat-expansion-panel [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{ material.projectName }}
-            <a href="javascript:void(0)" (click)="openDialog(material)" class="main-color p-l-15"
-              >{{ material.defaultAddress.addressLine1 }}
-              {{ material.defaultAddress.addressLine2 }}
-              {{ material.defaultAddress.city }}
-              {{ material.defaultAddress.state }}
-              {{ material.defaultAddress.pinCode }}
-            </a>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
+    <ng-container *ngIf="material.projectMaterialList.length">
+      <mat-accordion class="accordion-padding-zero" formArrayName="forms">
+        <mat-expansion-panel [expanded]="true">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              {{ material.projectName }}
+              <a href="javascript:void(0)" (click)="openDialog(material)" class="main-color p-l-15"
+                >{{ material.defaultAddress.addressLine1 }}
+                {{ material.defaultAddress.addressLine2 }}
+                {{ material.defaultAddress.city }}
+                {{ material.defaultAddress.state }}
+                {{ material.defaultAddress.pinCode }}
+              </a>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
 
-        <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="col-sm-12 rfq-custom-mat-width">
-          <ng-container matColumnDef="Material Name">
-            <th mat-header-cell *matHeaderCellDef>Material Name</th>
-            <td mat-cell *matCellDef="let element">
-              <div class="limited-character global" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="Estimated Qty">
-            <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
-            <td class="text-center" mat-cell *matCellDef="let element">
-              {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="Requested Qty">
-            <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
-            <td class="text-center" mat-cell *matCellDef="let element">
-              {{ element.requestedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
-            <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field
-                class="border-input date-label date-button mat-form-field-padding"
-                [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
-              >
-                <!-- <mat-label>Fullfil </mat-label> -->
-                <span class="form-placeholder">{{
-                  materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
-                    | date: "dd-MMM-yyy"
-                }}</span>
-                <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
-                <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
-                <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
-              </mat-form-field>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="Estimated Rate">
-            <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                <input
-                  matInput
-                  formControlName="estimatedRate"
-                  type="number"
-                  placeholder="Estimated Rate"
-                  min="0"
-                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-                />
-              </mat-form-field>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="Quantity">
-            <th mat-header-cell *matHeaderCellDef>Quantity</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                <input matInput formControlName="quantity" type="number" placeholder="Quantity" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
-              </mat-form-field>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="Makes">
-            <th mat-header-cell *matHeaderCellDef>Makes</th>
-            <td mat-cell *matCellDef="let element; let i = index">
-              <app-chip [chips]="element.makes" (onUpdate)="makesUpdate($event, i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0))"> </app-chip>
-            </td>
-          </ng-container>
+          <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:'materialName'" class="col-sm-12 rfq-custom-mat-width">
+            <ng-container matColumnDef="Material Name">
+              <th mat-header-cell *matHeaderCellDef>Material Name</th>
+              <td mat-cell *matCellDef="let element">
+                <div class="limited-character global" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="Estimated Qty">
+              <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
+              <td class="text-center" mat-cell *matCellDef="let element">
+                {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="Requested Qty">
+              <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
+              <td class="text-center" mat-cell *matCellDef="let element">
+                {{ element.requestedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
+              <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <mat-form-field
+                  class="border-input date-label date-button mat-form-field-padding"
+                  [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
+                >
+                  <!-- <mat-label>Fullfil </mat-label> -->
+                  <span class="form-placeholder">{{
+                    materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
+                      | date: "dd-MMM-yyy"
+                  }}</span>
+                  <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
+                  <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
+                  <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
+                </mat-form-field>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="Estimated Rate">
+              <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
+                  <input
+                    matInput
+                    formControlName="estimatedRate"
+                    type="number"
+                    placeholder="Estimated Rate"
+                    min="0"
+                    onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                  />
+                </mat-form-field>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="Quantity">
+              <th mat-header-cell *matHeaderCellDef>Quantity</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
+                  <input matInput formControlName="quantity" type="number" placeholder="Quantity" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
+                </mat-form-field>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="Makes">
+              <th mat-header-cell *matHeaderCellDef>Makes</th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <app-chip [chips]="element.makes" (onUpdate)="makesUpdate($event, i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0))"> </app-chip>
+              </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-      </mat-expansion-panel>
-    </mat-accordion>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </ng-container>
   </div>
 </form>
