--- a/src/app/shared/components/upload/upload.component.html
+++ b/src/app/shared/components/upload/upload.component.html
@@ -1,6 +1,5 @@
 <!-- new structure -->
 <div class="row" *ngIf="!userInfo">
-
   <div class="col-xs-12 upload-document-label" *ngIf="!userInfo">
     <label for="upload-document">
       Upload Document
@@ -14,27 +13,20 @@
     <span for="fileDropRef" class="btn btn-outline-warning main-color cursor">Upload</span>
   </div> -->
 
-
   <!-- Will invisible in case of Update User Info -->
   <div class="col-xs-12 grey-dotted-border p-t-40" appDnd>
     <div class="upload-green-tick">
-      <img src="../../../../assets/images/upload-green-arrow.png">
+      <img src="../../../../assets/images/upload-green-arrow.png" />
     </div>
-    <input type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" multiple
-      (change)="uploadFiles($event.target.files)" />
-    <span>Drag and drop or
-      <span for="fileDropRef" class="main-color">Browse</span> files
-      to upload</span>
+    <input type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" multiple (click)="uploadFiles($event.target.files)" />
+    <span>Drag and drop or <span for="fileDropRef" class="main-color">Browse</span> files to upload</span>
   </div>
 
-  <div class="col-xs-12 upload-document-label" *ngIf="fileToUpload && fileToUpload.length && documentListLength>0">
+  <div class="col-xs-12 upload-document-label" *ngIf="fileToUpload && fileToUpload.length && documentListLength > 0">
     <!-- {{ fileToUpload[fileToUpload.length - 1].name }} -->
     File has been successfully uploaded
   </div>
-  
 </div>
-
-
 
 <!-- <mat-card *ngIf="userInfo" class="p-0">
   <mat-list class="pt-0">
