--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -1,16 +1,14 @@
 <div class="header-add-edit-dialog p-r-0">
   <div class="row width-100">
-      <div class="col-sm-10">
-     <h1 mat-dialog-title>ADD GRN</h1>
-  </div>
+    <div class="col-sm-10">
+      <h1 mat-dialog-title>Add Good Receive Note</h1>
+    </div>
     <div class="col-sm-2">
-        <button type="button" class="close pull-right p-t-5" (click)="closeDialog()" aria-label="Close">
+      <button type="button" class="close pull-right p-t-5" (click)="closeDialog()" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
     </div>
   </div>
-  
- 
 </div>
 
 <form *ngIf="materialForms" [formGroup]="materialForms" (ngSubmit)="addGrn()">
@@ -23,7 +21,8 @@
             <td mat-cell *matCellDef="let element">
               <div class="limited-character global">
                 {{ element.materialName }}
-              </div></td>
+              </div>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="Brand Name">
@@ -31,15 +30,15 @@
             <td mat-cell *matCellDef="let element">{{ element.materialBrand }}</td>
           </ng-container>
 
-           <ng-container matColumnDef="Unit">
+          <ng-container matColumnDef="Unit">
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Unit</th>
             <td mat-cell *matCellDef="let element" class="text-align-center">
-             <span *ngIf="element.materialUnit != ''">
-                 {{ element.materialUnit }}
-             </span>
+              <span *ngIf="element.materialUnit != ''">
+                {{ element.materialUnit }}
+              </span>
               <span *ngIf="element.materialUnit == ''">
-                 -
-             </span>
+                -
+              </span>
             </td>
           </ng-container>
 
@@ -63,7 +62,14 @@
               <!-- <input matInput type="number" placeholder="Quantity"> -->
 
               <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input matInput formControlName="certifiedQty" type="number" placeholder="Received Quantity" min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
+                <input
+                  matInput
+                  formControlName="certifiedQty"
+                  type="number"
+                  placeholder="Received Quantity"
+                  min="0"
+                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                />
               </mat-form-field>
               <!-- {{ element.certifiedQuantity }} -->
             </td>
