Forgot Pass done and SignUp done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -25,7 +25,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="heading-des-forget">One Time Password (OTP) has been send to your mobile ******{{lastFourDigit}}, Please enter the same here to sign in.</div>
+                  <div class="heading-des-forget">One Time Password (OTP) has been send to your mobile ******{{lastFourDigit}}. Please enter the same here to change your password.</div>
                 </div>
 
                  <div *ngIf="passscreenShow">
