--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -8,8 +8,8 @@
                 </mat-form-field> -->
                <div class="phone-number">
                     <mat-form-field class="col-xs-12 border-input display-flex">
-                    <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone" placeholder="Phone No." (input)="enterPhone($event)" />
-                    <button  mat-raised-button class="background-white-color main-button color-main pull-right" (click)="sendOtpBtn()">
+                    <input matInput type="number"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone" #phone placeholder="Phone No." (input)="enterPhone($event)" />
+                    <button *ngIf="!lessOTPDigits"  mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="phone.value.length != 10" (click)="sendOtpBtn()">
                         Send Otp
                     </button>
                 </mat-form-field>
