Sign and Forget Pass Fix Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -54,17 +54,17 @@
                    
                     <ng-container *ngIf="OtpscreenShow && (!verifiedMobile)">
                        <mat-form-field class="col-xs-12 border-input display-flex">
-                          <input matInput type="text"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="otp" (input)="enterOTP($event)" placeholder="Enter the OTP" />
+                          <input matInput type="text"  min="0"  onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="otp" (input)="enterOTP($event)" #otp placeholder="Enter the OTP" />
                         <small
                         *ngIf="forgetPassForm.controls['otp'].hasError('required') && forgetPassForm.controls['otp'].touched"
                         class="forgetPassForm-error-msg"> OTP No is required </small>
-                        <small *ngIf="!lessOTPDigits && (otpLength==4)" class="forgetPassForm-error-msg"> Enter Valid OTP</small>
-                        <small class="signupForm-error-msg resend-otp" (click)="resendOtp()"> Resend OTP </small>
+                        <small class="forgetPassForm-error-msg"> {{otpMessageVerify}}</small>
+                        <small class="signupForm-error-msg resend-otp" (click)="resendOtp();otp.value = null"> Resend OTP </small>
                     </mat-form-field>
 
                       <div mat-dialog-actions class="col-xs-12 p-t-40">
                           <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-                              cdkFocusInitial style="width: 100%;" [disabled]="!lessOTPDigits" (click)="submitOTP()">
+                              cdkFocusInitial style="width: 100%;" [disabled]="otpLength != 4" (click)="submitOTP()">
                               Verify</button>
                       </div>
                   </ng-container>
@@ -73,7 +73,7 @@
                     <ng-container *ngIf="passscreenShow">
                       
                         <mat-form-field class="col-xs-12 border-input password-forget">
-                            <input matInput [type]="showPassWordString? 'text': 'password'" formControlName="password" placeholder="Password" />
+                            <input matInput [type]="showPassWordString? 'text': 'password'" formControlName="password" #pass placeholder="Password" />
                             <a>
                                 <mat-icon class="password-eye" (click)="showPassWord()">remove_red_eye</mat-icon>
                             </a>
@@ -81,7 +81,7 @@
 
                       <div mat-dialog-actions class="col-xs-12 p-t-40">
                           <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-                              cdkFocusInitial style="width: 100%;" [disabled]="!phoneNumberChecked" (click)="submitPass()">
+                              cdkFocusInitial style="width: 100%;" [disabled]="!(pass.value.length > 0)" (click)="submitPass()">
                               Submit</button>
                       </div>
                   </ng-container>
