turn over condition checked Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -78,7 +78,7 @@
                 </mat-error>
 
 
-                  <mat-form-field class="border-select w-100">
+                  <mat-form-field class="border-select w-100" *ngIf="users.roleName === 'l1'">
                   <mat-label>Select Turn Over</mat-label>
                   <mat-select formControlName="turnOverId">
                     <mat-option *ngFor="let turnOver of turnOverList" [value]="turnOver.turnOverId">
