--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -43,6 +43,12 @@
   display: flex;
   justify-content: center;
 }
+
+.rfq-bid-address{
+  button{
+    margin-bottom: 20px !important;
+  }
+}
 .user-dts {
   .myPanel {
     .mat-expansion-panel-header#mat-expansion-panel-header-0 {
